Prevent white space below footer

--- a/style.css
+++ b/style.css
@@ -7,13 +7,15 @@
 
 html,body{
     height: 100%;
+    min-height: 100%;
     width: 100%;
     color: #fff;
-    background-color: #111;
+    background-color: #111 !important;
 }
 
 #main {
-    background-color: #111;
+    min-height: 100%;
+    background-color: #111 !important;
 }
 
 nav{
